# admet-dkl

./: .gitignore  README.md  main.py  pyproject.toml  submission.py
configs/: config.yaml
configs/model/: mlp.yaml  sv_dkl.yaml  xgboost.yaml
configs/train/: default.yaml
report/: main.tex  references.bib
report/figures/: sn-sweep-compare.md
report/sections/: 1_introduction.tex  2_background.tex  3_methodology.tex  4_results.tex  5_conclusion.tex
src/: callbacks.py  train.py  train_xgb.py
src/models/: baseline_mlp.py  sv_dkl.py
src/utils/: compare_rc.py  compare_sweeps.py  metrics.py  reporting.py
